// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-input renders 1`] = `
<rux-input value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="rux-input rux-input--medium">
        <span class="rux-input-prefix" part="prefix">
          <slot name="prefix"></slot>
        </span>
        <input aria-invalid="false" class="native-input" id="rux-input-1" part="input" type="text" value="">
        <span class="rux-input-suffix" part="suffix">
          <slot name="suffix"></slot>
        </span>
      </div>
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;

exports[`rux-input renders label prop 1`] = `
<rux-input label="hello" value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <label aria-hidden="false" class="rux-input-label" htmlfor="rux-input-2" part="label">
        <span>
          <slot name="label">
            hello
          </slot>
        </span>
      </label>
      <div class="rux-input rux-input--medium">
        <span class="rux-input-prefix" part="prefix">
          <slot name="prefix"></slot>
        </span>
        <input aria-invalid="false" class="native-input" id="rux-input-2" part="input" type="text" value="">
        <span class="rux-input-suffix" part="suffix">
          <slot name="suffix"></slot>
        </span>
      </div>
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;

exports[`rux-input renders label slot 1`] = `
<rux-input value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <label aria-hidden="false" class="rux-input-label" htmlfor="rux-input-3" part="label">
        <span>
          <slot name="label"></slot>
        </span>
      </label>
      <div class="rux-input rux-input--medium">
        <span class="rux-input-prefix" part="prefix">
          <slot name="prefix"></slot>
        </span>
        <input aria-invalid="false" class="native-input" id="rux-input-3" part="input" type="text" value="">
        <span class="rux-input-suffix" part="suffix">
          <slot name="suffix"></slot>
        </span>
      </div>
    </div>
  </mock:shadow-root>
  <div slot="label">
    hello
  </div>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;

exports[`rux-input renders rux-icon if type is password 1`] = `
<rux-input type="password" value="">
  <mock:shadow-root>
    <div class="rux-form-field" part="form-field">
      <div class="rux-input rux-input--medium">
        <span class="rux-input-prefix" part="prefix">
          <slot name="prefix"></slot>
        </span>
        <input aria-invalid="false" autocomplete="off" class="native-input" id="rux-input-4" part="input" type="password" value="">
        <rux-button borderless="" class="pw-button" icononly="" size="small">
          <rux-icon exportparts="icon" icon="visibility" size="extra-small"></rux-icon>
        </rux-button>
        <span class="rux-input-suffix" part="suffix">
          <slot name="suffix"></slot>
        </span>
      </div>
    </div>
  </mock:shadow-root>
  <input class="aux-input" type="hidden" value="">
</rux-input>
`;
